--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,9 @@
 # 後端服務設定
 PORT=3000
 
-# DB 連線（主機用服務名 mysql）
-DB_HOST=mysql
-DB_PORT=3306
+# DB 連線（從主機連 docker 裡的 MySQL）
+DB_HOST=127.0.0.1      
+DB_PORT=3310           
 DB_USER=appuser
 DB_PASSWORD=apppass
 DB_NAME=secondhand_db
