--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,11 @@
 FROM node:20-alpine
-
 WORKDIR /app
 
-COPY package.json package-lock.json* ./
+COPY package*.json ./
 RUN npm install --omit=dev
 
-COPY server.js ./
-# public 用 volume 掛入（在 compose 裡），所以這裡不複製
+# 把 backend 其他程式碼（models/routes/controllers 等）一起帶進去
+COPY . .
 
 EXPOSE 3000
 CMD ["npm", "start"]
